--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <main>
         <div class="header">
             <h1>
-                Algorithm Visualizer
+                Bubble Sort Visualization
             </h1>
         </div>
         <div class="buttons">
             <button id="btn">Generate Array</button>
+            <button id="btn2">Bubble Sort!</button>
         </div>
         <div class="container">
 
